# sdl2-2048

./: README.md  meson.build
include/: app.h  canvas.h  config.h  game_object.h
include/core/: app.h  config.h
include/helper/: canvas.h  logger.h
src/: canvas.cpp  game_object.cpp  main.cpp
src/app/: app.cpp  app_clean.cpp  app_handle_event.cpp  app_init.cpp  app_render.cpp  app_run.cpp  app_update.cpp
src/core/app/: app.cpp  app_clean.cpp  app_handle_event.cpp  app_init.cpp  app_render.cpp  app_run.cpp  app_update.cpp
src/helper/: canvas.cpp  game_object.cpp  logger.cpp
